--- a/Organiza tu armario/index.html
+++ b/Organiza tu armario/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 class="titulo">ORGANIZA TU ARMARIO</h1>
-    <button id="añadir">Invierno</button>
-    <button id="afegir">Verano</button>
-</body>
+    <a href="./Invierno.html"><button id="añadir">Invierno</button></a>
+    <a href="Verano.html"><button id="afegir">Verano</button></a>
+</body>,
 </html> 
