--- a/Organiza tu armario/Invierno.html
+++ b/Organiza tu armario/Invierno.html
@@ -7,17 +7,46 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    
     <title>Invierno</title>
     
 </head>
 <body>
 
-<a href="https://www.zara.com/es/ca/bodi-de-poliamida-d-escot-quadrat-p05039386.html?v1=398088219"> <img src="./img/body negro.png" class="img" ></a>
-<a href="https://www.stradivarius.com/es/d92-jeans-straight-wide-l04891885?colorId=707&xs=13&pelement=397040197"><img src="./img/Pantalón gris.png" class="img" ></a>
-<a href="https://www.zara.com/es/es/cartera-bandolera-tachas-p16585410.html"> <img src="/img/bolso negro.png" class="img"></a>
-<a href=""> <img src="./img/zapatos.png" class="img"></a>
-<a href="https://singularu.com/products/pendiente-aro-lake-oro?_pos=8&_sid=56fc69ce2&_ss=r"><img src="img/pendientes.png" class="img"></a>
 
- <button class="click"> Modelo 1</button>
+
+ <button onclick="mostrar()"> Modelo 1</button>
+ <a href="https://www.zara.com/es/ca/bodi-de-poliamida-d-escot-quadrat-p05039386.html?v1=398088219"> <img src="./img/body negro.png" class="img" ></a>
+ <a href="https://www.stradivarius.com/es/d92-jeans-straight-wide-l04891885?colorId=707&xs=13&pelement=397040197"><img src="./img/Pantalón gris.png" class="img" ></a>
+ <a href="https://www.zara.com/es/es/cartera-bandolera-tachas-p16585410.html"> <img src="./img/bolso negro.png" class="img"></a>
+ <a href="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRAx-JItZjiAVcJSsU6ggV0y5Ul7VzhdE0YxF7BZLQVrc-HOxhiL27NnRxyzJp986wmbO85PcCG12pKCAsauUS5vf2V_-iexDe0bRRUVf_u6HZMoRehX5lL"> <img src="./img/zapatos.png" class="img"></a>
+ <a href="https://singularu.com/products/pendiente-aro-lake-oro?_pos=8&_sid=56fc69ce2&_ss=r"><img src="./img/pendientes.png" class="img"></a>
+ 
+ <button onclick="mostrar2()"> Modelo 2</button>
+
+<a href="https://www.zara.com/es/ca/jersei-soft-de-punt-llis-p02142168.html?v1=395785912"><img src="./img/jersey gris.png" class="img"> </a>
+<a href="https://www.zara.com/es/ca/sense-talonera-peca-estampat-p12265410.html?v1=384339205"><img src="img/tacones-removebg-preview.png" class="img"></a>
+<a href="https://www.zara.com/es/ca/faldilla-midi-setinada-p08338537.html?v1=413764414"><img src="img/falda-removebg-preview.png" class="img"> </a>
+<a href="https://www.zara.com/es/ca/bodi-de-llenceria-amb-punta-p00347300.html?v1=382104574"><img src="img/body_negro-removebg-preview.png" class="img"> </a>
+
+<button onclick="mostrar()"> Modelo 3</button>
+<a href="https://www.zara.com/es/ca/jersei-soft-de-punt-llis-p02142168.html?v1=395785912"><img src="" alt=""></a>
+
 </body>
+<script>
+    function mostrar(){
+    let imatges = document.getElementsByClassName("img");
+    for(let i = 0; i< imatges.length; i++){
+       imatges[i].classList.add("mostrar")
+        console.log(imatges[i].classList)
+    }
+}
+function mostrar2(){
+    let imatges = document.getElementsByClassName("img");
+    for(let i = 0; i< imatges.length; i++){
+       imatges[i].classList.add("mostrar")
+        console.log(imatges[i].classList)
+    }
+}
+</script>
 </html>
