--- a/Organiza tu armario/Invierno.html
+++ b/Organiza tu armario/Invierno.html
@@ -15,17 +15,23 @@
 <body>
 
 
-
- <button>Modelo 1</button>
-
+<div class="container">
+    <img src="./img/Look 1.png" >
+    <button id="mod1">Modelo 1</button>
+</div>
  
- <button onclick="mostrar2()"> Modelo 2</button>
 
+ <div class="container">
+<img src="./img/Look 2.png" >
+<button id="mod2"> Modelo 2</button>
+ </div>
 
+<div class="container">
+<img src="./img/Look 3.png" >
+    <button id="mod3"> Modelo 3</button>  
+</div>
 
-<button onclick="mostrar()"> Modelo 3</button>
-
-<div id="l1"></div>
+<div id="lista"></div>
 
 </body>
 <script type="module" src="./js/script.js"></script>
