--- a/Organiza tu armario/Verano.html
+++ b/Organiza tu armario/Verano.html
@@ -10,6 +10,29 @@
     <title>Verano</title>
 </head>
 <body>
-    <a href="https://www.zara.com/es/ca/texans-trf-de-pota-ampla-mid-waist-full-length-p06688034.html?v1=380987281"> <img src="./img/top blanco.png" class="img"></a>
+   
+    <div class="container">
+        <img src="./img/Verano Look 1.png" >
+        <button id="mod1">Modelo 1</button>
+    </div>
+  
+
+
+<div class="container">
+    <img src="./img/Verano Look 2.png">
+    <button id="mod2"> Modelo 2</button>
+    
+</div>
+   
+
+   <div class="container">
+   <img src="./img/Verano Look 3.png">
+   <button id="mod3"> Modelo 3</button>
+
+   </div>
+   
+   <div id="lista"></div>
+
 </body>
+<script type="module" src="./js/scriptVerano.js"></script>
 </html> 
